runtime/snapshots/custom-interfaces-basic_interface-BasicInterfaceMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
          fields: []
      - address: 1
        type: Instance
        value:
          class: interfaces/basic_interface/BasicInterfaceMain$ClassImplementingSummable
          fields: []
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Object: 0
    - Object: 1
    - Integer: 3
    - Integer: 7
  operands: []
  pc: 34
