runtime/snapshots/custom-string-basic_literal-BasicStringLiteralMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: "[C"
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
      - address: 1
        type: Instance
        value:
          class: java/lang/String
          fields:
            - Array: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Array
        class: java/io/ObjectStreamField
        elements: []
      - address: 3
        type: Instance
        value:
          class: java/lang/String$CaseInsensitiveComparator
          fields: []
    string_pool:
      - string: hello
        address: 1
last_pop_frame:
  locals:
    - ~
    - Object: 1
    - Integer: 5
  operands: []
  pc: 9
