runtime/snapshots/custom-string-combined_literal_and_new-CombinedStringLiteralAndNewMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: ArrayPrimitive
        class: Char
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
      - address: 1
        type: Instance
        value:
          class: java/lang/String
          fields:
            - Array: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: ArrayRef
        class: java/io/ObjectStreamField
        elements: []
      - address: 3
        type: Instance
        value:
          class: java/lang/String$CaseInsensitiveComparator
          fields: []
      - address: 4
        type: Instance
        value:
          class: java/lang/String
          fields:
            - Array: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
    string_pool:
      - string: hello
        address: 1
last_pop_frame:
  locals:
    - ~
    - Object: 1
    - Object: 1
    - Object: 4
  operands: []
  pc: 17
