runtime/snapshots/runtime-abstracts-basic_abstract-BasicAbstractMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: 6
          fields: []
      - address: 1
        type: Instance
        value:
          class: 6
          fields: []
      - address: 2
        type: Array
        class: 0
        elements:
          - Integer: 77
          - Integer: 101
          - Integer: 111
          - Integer: 119
      - address: 3
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 2
            - Integer: 0
            - Integer: 0
            - Integer: 0
    string_pool:
      - string: Meow
        address: 3
last_pop_frame:
  locals:
    - ~
    - Ref: 0
    - Ref: 1
    - Ref: 3
    - Ref: 3
  operands: []
  pc: 28
