runtime/snapshots/runtime-arrays-clone_char_array-CloneCharArrayMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 0
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
      - address: 1
        type: Array
        class: 0
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Ref: 0
    - Ref: 1
  operands: []
  pc: 38
