runtime/snapshots/runtime-arrays-reference_array-ReferenceArrayMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: 5
          fields:
            - Integer: 1
      - address: 1
        type: Instance
        value:
          class: 5
          fields:
            - Integer: 2
      - address: 2
        type: Instance
        value:
          class: 5
          fields:
            - Integer: 3
      - address: 3
        type: Array
        class: 5
        elements:
          - Ref: 0
          - Ref: 1
          - Ref: 2
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Ref: 0
    - Ref: 1
    - Ref: 2
    - Ref: 3
    - Integer: 3
  operands: []
  pc: 51
