runtime/snapshots/runtime-classes-basic_dynamic_dispatch-BasicDynamicDispatchMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 0
        elements:
          - Integer: 106
          - Integer: 97
          - Integer: 118
          - Integer: 97
          - Integer: 46
          - Integer: 118
          - Integer: 101
          - Integer: 114
          - Integer: 115
          - Integer: 105
          - Integer: 111
          - Integer: 110
      - address: 1
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 0
            - Integer: 0
            - Integer: 560567564
            - Integer: 0
      - address: 2
        type: Array
        class: 5
        elements: []
      - address: 3
        type: Instance
        value:
          class: 6
          fields: []
      - address: 4
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 5
        type: Array
        class: 3
        elements: []
      - address: 6
        type: Array
        class: 5
        elements: []
      - address: 7
        type: Instance
        value:
          class: 9
          fields: []
      - address: 8
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 9
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 10
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 11
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 12
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 13
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 14
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 15
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 16
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 17
        type: Array
        class: 0
        elements:
          - Integer: 105
          - Integer: 110
          - Integer: 116
      - address: 18
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 17
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 19
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 20
        type: Array
        class: 0
        elements:
          - Integer: 48
          - Integer: 49
          - Integer: 50
          - Integer: 51
          - Integer: 52
          - Integer: 53
          - Integer: 54
          - Integer: 55
          - Integer: 56
          - Integer: 57
          - Integer: 97
          - Integer: 98
          - Integer: 99
          - Integer: 100
          - Integer: 101
          - Integer: 102
          - Integer: 103
          - Integer: 104
          - Integer: 105
          - Integer: 106
          - Integer: 107
          - Integer: 108
          - Integer: 109
          - Integer: 110
          - Integer: 111
          - Integer: 112
          - Integer: 113
          - Integer: 114
          - Integer: 115
          - Integer: 116
          - Integer: 117
          - Integer: 118
          - Integer: 119
          - Integer: 120
          - Integer: 121
          - Integer: 122
      - address: 21
        type: Array
        class: 0
        elements:
          - Integer: 98
          - Integer: 121
          - Integer: 116
          - Integer: 101
      - address: 22
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 21
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 23
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
    string_pool:
      - string: byte
        address: 22
      - string: int
        address: 18
      - string: java.version
        address: 1
last_pop_frame:
  locals:
    - ~
    - Ref: 1
    - Integer: 560567564
  operands: []
  pc: 9
