runtime/snapshots/runtime-classes-class_is_not_primitive-ClassIsNotPrimitiveMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 0
        elements: []
      - address: 1
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
    string_pool:
      - string: ""
        address: 1
last_pop_frame:
  locals:
    - ~
    - Ref: 2
    - Integer: 0
  operands: []
  pc: 12
