runtime/snapshots/runtime-classes-default_fields_values-InstanceDefaultValuesMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: 5
          fields:
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
            - Long: 0
            - Float: 0
            - Double: 0
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Ref: 0
  operands: []
  pc: 9
